--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mocca"]
-	path = mocca
+[submodule "IV3Dm2-lib/mocca"]
+	path = IV3Dm2-lib/mocca
 	url = https://github.com/david-mccann/mocca.git
