--- a/IV3Dm2-lib/CMakeLists.txt
+++ b/IV3Dm2-lib/CMakeLists.txt
@@ -6,6 +6,8 @@ FILE(GLOB SCENE_HEADER ${CMAKE_CURRENT_LIST_DIR}/Scene/*.h)
 FILE(GLOB SCENE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Scene/*.cpp)
 FILE(GLOB RENDER_HEADER ${CMAKE_CURRENT_LIST_DIR}/Render/*.h)
 FILE(GLOB RENDER_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Render/*.cpp)
+FILE(GLOB IVDA_HEADER ${CMAKE_CURRENT_LIST_DIR}/IVDA/*.h)
+FILE(GLOB IVDA_SOURCE ${CMAKE_CURRENT_LIST_DIR}/IVDA/*.cpp)
 
 ADD_SUBDIRECTORY(mocca/mocca)
 
@@ -14,5 +16,6 @@ ADD_LIBRARY(IV3Dm2-lib
 	${COMMUNICATION_HEADER} ${COMMUNICATION_SOURCE}
 	${SCENE_HEADER} ${SCENE_SOURCE}
 	${RENDER_HEADER} ${RENDER_SOURCE}
+	${IVDA_HEADER} ${IVDA_SOURCE}
 	$<TARGET_OBJECTS:mocca>
 )
