--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ PROJECT(IV3Dm-lib)
 
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
+SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS on)
+
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/IV3Dm2-lib)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/IV3Dm2-lib/mocca/mocca/include)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/IV3Dm2-lib/mocca/mocca/src/thirdparty)
