--- a/IV3Dm2-lib/CMakeLists.txt
+++ b/IV3Dm2-lib/CMakeLists.txt
@@ -1,17 +1,13 @@
-FILE(GLOB COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/Common/*.h)
-FILE(GLOB COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Common/*.cpp)
-FILE(GLOB SCENE_HEADER ${CMAKE_CURRENT_LIST_DIR}/Scene/*.h)
-FILE(GLOB SCENE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Scene/*.cpp)
-FILE(GLOB IVDA_HEADER ${CMAKE_CURRENT_LIST_DIR}/IVDA/*.h)
-FILE(GLOB IVDA_SOURCE ${CMAKE_CURRENT_LIST_DIR}/IVDA/*.cpp)
+#FILE(GLOB COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/Common/*.h)
+#FILE(GLOB COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Common/*.cpp)
 
 ADD_SUBDIRECTORY(mocca/mocca)
 
+ADD_SUBDIRECTORY(IVDA)
+ADD_SUBDIRECTORY(Scene)
+
 ADD_LIBRARY(IV3Dm2-lib 
-	${COMMON_HEADER} ${COMMON_SOURCE}
-	${COMMUNICATION_HEADER} ${COMMUNICATION_SOURCE}
-	${SCENE_HEADER} ${SCENE_SOURCE}
-	${RENDER_HEADER} ${RENDER_SOURCE}
-	${IVDA_HEADER} ${IVDA_SOURCE}
 	$<TARGET_OBJECTS:mocca>
+	$<TARGET_OBJECTS:ivda>
+	$<TARGET_OBJECTS:scene>
 )
