added and refactored I3M parser from IV3DM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,4 @@ IF (MSVC)
 	SET(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
 ENDIF ()
 ADD_SUBDIRECTORY(mocca/ext/googletest)
-ADD_SUBDIRECTORY(tests)
+#ADD_SUBDIRECTORY(tests)
