implementation of GL 2D texture

--- a/duality-client/CMakeLists.txt
+++ b/duality-client/CMakeLists.txt
@@ -45,6 +45,7 @@ SET(DUALITY_HEADER_PRIVATE
 	src/duality/DataProvider.h
 	src/duality/Dataset.h
 	src/duality/DatasetDispatcher.h
+	src/duality/GLTexture2D.h
 
 	src/IVDA/ArcBall.h
 	src/IVDA/Console.h
@@ -100,7 +101,8 @@ SET (DUALITY_SOURCE
 	src/duality/PythonProvider.cpp
 	src/duality/InputVariable.cpp
 	src/duality/MVP2D.cpp
-	src/duality/MVP3D.cpp)
+	src/duality/MVP3D.cpp
+	src/duality/GLTexture2D.cpp)
 	
 SOURCE_GROUP("Public Headers" FILES ${DUALITY_HEADER_PUBLIC})	
 SOURCE_GROUP("Private Headers" FILES ${DUALITY_HEADER_PRIVATE})
